# raytracing

./: .gitignore  CMakeLists.txt  README.org
include/: camera.h  color.h  hittable.h  hittable_list.h  ray.h  sphere.h  utils.h  vec3.h
src/: color.cpp  hittable_list.cpp  main.cpp  ray.cpp  sphere.cpp  vec3.cpp
